# edc-mod1-exercise-igti

./: .gitignore  EMR-IGTI-Delta-notebook.ipynb  README.md  glue_spark_job.py  ingest_pnadc20203_to_postgres.py  interact_s3.py  job_spark.py  pyproject.toml  simulations_to_kinesis.py
.github/workflows/: deploy.yaml  test.yaml
airflow/: airflow_variables_sample.json  docker-compose-CeleryExecutor.yml  install_docker.sh
airflow/dags/: enem_processing.py
etl/: 01_delta_spark_insert.py  02_delta_spark_upsert.py  lambda_function.py
infrastructure/: cloudwatch.tf  ec2.tf  glue_crawler.tf  iam.tf  kinesis.tf  lambda.tf  provider.tf  s3.tf  s3_files.tf  variables.tf
