[tool.poetry]
name = "edc-mod1-exercise-igti"
version = "0.1.0"
description = ""
authors = ["HemersonRafael <rafaelpontes1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.21.23"
fake-web-events = "^0.2.5"
pandas = "^1.4.1"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
